--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -11,6 +11,9 @@
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.3.0/firebase-ui-auth.css" />
   <link rel="stylesheet" href="/src/plugins/bulma-calendar/css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="/src/styles/main.css">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="eventos freestyle, calendario freestyle">
+
 </head>
 
 <body>
