Updates before release

--- a/index.html
+++ b/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>CalendarioFree</title>
+  <meta name="description" content="Encuentra los eventos de freestyles mas cercanos a ti." />
+  
+  <meta name="og:title" content="Clendario Freestyle" />
+  <meta name="og:type" content="website" />
+  <meta name="og:url" content="https://calendariofree.web.app/" />
+  <meta name="og:image" content="https://calendariofree.web.app/dist/social-card.png" />
+  <meta name="og:description" content="Encuentra los eventos de freestyles mas cercanos a ti" />
+
+  
+  <meta name="twitter:card" value="summary">
+  <meta name="twitter:description" content="Encuentra los eventos de freestyles mas cercanos a ti" />
+  <meta name="twitter:image" content="https://calendariofree.web.app/dist/social-card.png" />
+
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="eventos freestyle, calendario freestyle">
+
+
   <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.3.0/firebase-ui-auth.css" />
   <link rel="stylesheet" href="/src/plugins/bulma-calendar/css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="/src/styles/main.css">
-  <meta name="robots" content="index, follow">
-  <meta name="keywords" content="eventos freestyle, calendario freestyle">
-
 </head>
 
 <body>
