--- a/index.html
+++ b/index.html
@@ -10,24 +10,43 @@
   <meta name="og:title" content="Clendario Freestyle" />
   <meta name="og:type" content="website" />
   <meta name="og:url" content="https://calendariofree.web.app/" />
-  <meta name="og:image" content="https://calendariofree.web.app/dist/social-card.png" />
+  <meta name="og:image" content="/src/images/social-card.png" />
   <meta name="og:description" content="Encuentra los eventos de freestyles mas cercanos a ti" />
 
   
   <meta name="twitter:card" value="summary">
   <meta name="twitter:description" content="Encuentra los eventos de freestyles mas cercanos a ti" />
-  <meta name="twitter:image" content="https://calendariofree.web.app/dist/social-card.png" />
+  <meta name="twitter:image" content="/src/images/social-card.png" />
 
   <meta name="robots" content="index, follow">
   <meta name="keywords" content="eventos freestyle, calendario freestyle">
 
 
   <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
-  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/2.5.94/css/materialdesignicons.min.css">
   <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.3.0/firebase-ui-auth.css" />
   <link rel="stylesheet" href="/src/plugins/bulma-calendar/css/index.css" rel="stylesheet">
   <link rel="stylesheet" href="/src/styles/main.css">
+
+  <link rel="apple-touch-icon" sizes="57x57" href="/src/images/favico/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/src/images/favico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/src/images/favico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/src/images/favico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/src/images/favico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/src/images/favico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/src/images/favico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/src/images/favico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/src/images/favico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/src/images/favico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/src/images/favico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/src/images/favico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/src/images/favico/favicon-16x16.png">
+  <link rel="manifest" href="/src/images/favico/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/src/images/favico/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
